@@ -1,4 +1,4 @@
-import { render, screen } from '@testing-library/react';
+import { render } from '@testing-library/react';
 import PaymentsAndTransactionsSection from '..';
 import { useAccount } from 'wcstripe/data/account';
 import {
@@ -6,8 +6,6 @@ import {
 	useSavedCards,
 	useIsShortAccountStatementEnabled,
 	useSeparateCardForm,
-	useAccountStatementDescriptor,
-	useShortAccountStatementDescriptor,
 	useGetSavingError,
 } from 'wcstripe/data';
 
@@ -20,8 +18,6 @@ jest.mock( 'wcstripe/data', () => ( {
 	useSavedCards: jest.fn(),
 	useIsShortAccountStatementEnabled: jest.fn(),
 	useSeparateCardForm: jest.fn(),
-	useAccountStatementDescriptor: jest.fn(),
-	useShortAccountStatementDescriptor: jest.fn(),
 	useGetSavingError: jest.fn(),
 } ) );
 
@@ -48,37 +44,6 @@ describe( 'PaymentsAndTransactionsSection', () => {
 		} );
 
 		useGetSavingError.mockReturnValue( null );
-	} );
-
-	it( 'displays the length of the bank statement input', () => {
-		render( <PaymentsAndTransactionsSection /> );
-
-		// The default bank statement ("WOOTESTING, LTD") is 15 characters long.
-		expect( screen.getByText( '15 / 22' ) ).toBeInTheDocument();
-	} );
-
-	it( 'shows the shortened bank statement input', () => {
-		useIsShortAccountStatementEnabled.mockReturnValue( [
-			true,
-			jest.fn(),
-		] );
-
-		useAccount.mockReturnValue( {
-			data: {
-				account: {
-					settings: {
-						card_payments: {
-							statement_descriptor_prefix: 'WOOTEST',
-						},
-					},
-				},
-			},
-		} );
-
-		render( <PaymentsAndTransactionsSection /> );
-
-		// The default short bank statement ("WOOTEST") is 7 characters long.
-		expect( screen.getByText( '7 / 10' ) ).toBeInTheDocument();
 	} );
 
 	it( 'shows the full bank statement preview', () => {
@@ -119,74 +84,5 @@ describe( 'PaymentsAndTransactionsSection', () => {
 				'.shortened-bank-statement .transaction-detail.description'
 			)
 		).toBe( null );
-	} );
-
-	it( 'displays the error message for the statement input', () => {
-		useAccountStatementDescriptor.mockReturnValue( [ 'WOO', jest.fn() ] );
-		useGetSavingError.mockReturnValue( {
-			code: 'rest_invalid_param',
-			message: 'Invalid parameter(s): statement_descriptor',
-			data: {
-				status: 400,
-				params: {
-					statement_descriptor:
-						'Customer bank statement is invalid. No special characters: \' " * &lt; &gt;',
-				},
-				details: {
-					statement_descriptor: {
-						code: 'rest_invalid_pattern',
-						message:
-							'Customer bank statement is invalid. No special characters: \' " * &lt; &gt;',
-						data: null,
-					},
-				},
-			},
-		} );
-
-		render( <PaymentsAndTransactionsSection /> );
-
-		expect(
-			screen.getByText(
-				`Customer bank statement is invalid. No special characters: ' " * < >`
-			)
-		).toBeInTheDocument();
-	} );
-
-	it( 'displays the error message for the short statement input', () => {
-		useShortAccountStatementDescriptor.mockReturnValue( [
-			'WOO',
-			jest.fn(),
-		] );
-		useIsShortAccountStatementEnabled.mockReturnValue( [
-			true,
-			jest.fn(),
-		] );
-		useGetSavingError.mockReturnValue( {
-			code: 'rest_invalid_param',
-			message: 'Invalid parameter(s): short_statement_descriptor',
-			data: {
-				status: 400,
-				params: {
-					short_statement_descriptor:
-						'Customer bank statement is invalid. No special characters: \' " * &lt; &gt;',
-				},
-				details: {
-					short_statement_descriptor: {
-						code: 'rest_invalid_pattern',
-						message:
-							'Customer bank statement is invalid. No special characters: \' " * &lt; &gt;',
-						data: null,
-					},
-				},
-			},
-		} );
-
-		render( <PaymentsAndTransactionsSection /> );
-
-		expect(
-			screen.getByText(
-				`Customer bank statement is invalid. No special characters: ' " * < >`
-			)
-		).toBeInTheDocument();
 	} );
 } );
