@@ -1,41 +1,39 @@
 import { __ } from '@wordpress/i18n';
 import React, { useContext } from 'react';
+import styled from '@emotion/styled';
 import {
 	Card,
 	CheckboxControl,
 	TextControl,
 	ExternalLink,
 } from '@wordpress/components';
-import { Icon, help } from '@wordpress/icons';
 import interpolateComponents from 'interpolate-components';
 import CardBody from '../card-body';
-import TextLengthHelpInputWrapper from './text-length-help-input-wrapper';
 import StatementPreviewsWrapper from './statement-previews-wrapper';
 import StatementPreview from './statement-preview';
 import ManualCaptureControl from './manual-capture-control';
 import { useAccount } from 'wcstripe/data/account';
-import Tooltip from 'wcstripe/components/tooltip';
 import {
 	useSavedCards,
 	useSeparateCardForm,
 	useIsShortAccountStatementEnabled,
-	useGetSavingError,
 } from 'wcstripe/data';
-import InlineNotice from 'wcstripe/components/inline-notice';
 import UpeToggleContext from 'wcstripe/settings/upe-toggle/context';
 
-const TooltipBankStatementHelp = () => (
-	<Tooltip
-		content={ __(
-			'The bank statement must contain only Latin characters, be between 5 and 22 characters, and not contain any of the special characters: \' " * < >',
-			'woocommerce-gateway-stripe'
-		) }
-	>
-		<span>
-			<Icon style={ { fill: '#949494' } } icon={ help } />
-		</span>
-	</Tooltip>
-);
+const StatementDescriptorInputWrapper = styled.div`
+	position: relative;
+
+	.components-base-control__field {
+		@media ( min-width: 783px ) {
+			width: 50%;
+		}
+
+		.components-text-control__input {
+			// to make room for the help text, so that the input's text and the help text don't overlap
+			padding-right: 55px;
+		}
+	}
+`;
 
 const PaymentsAndTransactionsSection = () => {
 	const [ isSavedCardsEnabled, setIsSavedCardsEnabled ] = useSavedCards();
@@ -49,11 +47,6 @@ const PaymentsAndTransactionsSection = () => {
 	] = useIsShortAccountStatementEnabled();
 
 	const { isUpeEnabled } = useContext( UpeToggleContext );
-
-	const statementDescriptorErrorMessage = useGetSavingError()?.data?.details
-		?.statement_descriptor?.message;
-	const shortStatementDescriptorErrorMessage = useGetSavingError()?.data
-		?.details?.short_statement_descriptor?.message;
 
 	const translatedFullBankPreviewTitle = isShortAccountStatementEnabled
 		? __( 'All Other Payment Methods', 'woocommerce-gateway-stripe' )
@@ -118,20 +111,7 @@ const PaymentsAndTransactionsSection = () => {
 						'woocommerce-gateway-stripe'
 					) }
 				</h4>
-				{ statementDescriptorErrorMessage && (
-					<InlineNotice status="error" isDismissible={ false }>
-						<span
-							dangerouslySetInnerHTML={ {
-								__html: statementDescriptorErrorMessage,
-							} }
-						/>
-					</InlineNotice>
-				) }
-				<TextLengthHelpInputWrapper
-					textLength={ stripeAccountStatementDescriptor.length }
-					maxLength={ 22 }
-					iconSlot={ <TooltipBankStatementHelp /> }
-				>
+				<StatementDescriptorInputWrapper>
 					<TextControl
 						help={ interpolateComponents( {
 							mixedString: __(
@@ -149,10 +129,9 @@ const PaymentsAndTransactionsSection = () => {
 							'woocommerce-gateway-stripe'
 						) }
 						value={ stripeAccountStatementDescriptor }
-						maxLength={ 22 }
 						disabled={ true } // This field is read only. It is set in the Stripe account.
 					/>
-				</TextLengthHelpInputWrapper>
+				</StatementDescriptorInputWrapper>
 
 				<CheckboxControl
 					checked={ isShortAccountStatementEnabled }
@@ -167,47 +146,27 @@ const PaymentsAndTransactionsSection = () => {
 					) }
 				/>
 				{ isShortAccountStatementEnabled && (
-					<>
-						{ shortStatementDescriptorErrorMessage && (
-							<InlineNotice
-								status="error"
-								isDismissible={ false }
-							>
-								<span
-									dangerouslySetInnerHTML={ {
-										__html: shortStatementDescriptorErrorMessage,
-									} }
-								/>
-							</InlineNotice>
-						) }
-						<TextLengthHelpInputWrapper
-							textLength={
-								stripeAccountShortStatementDescriptor.length
-							}
-							maxLength={ 10 }
-						>
-							<TextControl
-								help={ interpolateComponents( {
-									mixedString: __(
-										"We'll use the shortened descriptor in combination with the customer order number. You can change the shortened description in your {{settingsLink}}Stripe account settings{{/settingsLink}}.",
-										'woocommerce-gateway-stripe'
-									),
-									components: {
-										settingsLink: (
-											<ExternalLink href="https://dashboard.stripe.com/settings/public" />
-										),
-									},
-								} ) }
-								label={ __(
-									'Shortened customer bank statement',
+					<StatementDescriptorInputWrapper>
+						<TextControl
+							help={ interpolateComponents( {
+								mixedString: __(
+									"We'll use the shortened descriptor in combination with the customer order number. You can change the shortened description in your {{settingsLink}}Stripe account settings{{/settingsLink}}.",
 									'woocommerce-gateway-stripe'
-								) }
-								value={ stripeAccountShortStatementDescriptor }
-								maxLength={ 10 }
-								disabled={ true } // This field is read only. It is set in the Stripe account.
-							/>
-						</TextLengthHelpInputWrapper>
-					</>
+								),
+								components: {
+									settingsLink: (
+										<ExternalLink href="https://dashboard.stripe.com/settings/public" />
+									),
+								},
+							} ) }
+							label={ __(
+								'Shortened customer bank statement',
+								'woocommerce-gateway-stripe'
+							) }
+							value={ stripeAccountShortStatementDescriptor }
+							disabled={ true } // This field is read only. It is set in the Stripe account.
+						/>
+					</StatementDescriptorInputWrapper>
 				) }
 				<StatementPreviewsWrapper>
 					{ isShortAccountStatementEnabled && (
